# X-Launcher

./: .gitignore  CHANGELOG  Code-of-conduct.rtf  Directory.Packages.props  LICENSE  README.md  Taskfile.yml  X-Launcher.sln  X_Launcher.sln  code-of-conduct.md  code-of-conduct.rtf  config.ini  install.taskfile  installer-windows.iss  pyproject.toml  setup.py  start-legacy.py  start-x-launcher.py
.run/: start-x-launcher.run.xml
X Launcher/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
X Launcher/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
X Launcher/Views/: MainWindow.axaml  MainWindow.axaml.cs
X-Launcher.App/: App.axaml  App.axaml.cs  ViewLocator.cs  X-Launcher.App.csproj
X-Launcher.CLI.Windows/: Program.cs  X-Launcher.CLI.Windows.csproj
X-Launcher.Desktop/: Program.cs  X-Launcher.Desktop.csproj
X_Launcher.CLI/: DataSeeder.cs  Program.cs  X_Launcher.CLI.csproj
X_Launcher.Core/: ConsoleDisplay.cs  ProductionContext.cs  X_Launcher.Core.csproj
X_Launcher.Desktop/: app.manifest
X_Launcher.GTK/: main.py
X_Launcher_CLI/: Program.cs  X_Launcher_CLI.csproj
X_Launcher_Core/: ConsoleDisplayColor.cs  Launcher.cs  Model.cs  ProductionContext.cs  User.cs
X_Launcher_GUI/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  X_Launcher_GUI.csproj  app.manifest
assets/: banner.xcf
frontend/: app.py  core_connector.py  json_trans.py  main_window.py  sys_tray.py
locales/: en.json  fr.json
pkg/: installer-windows.iss
src/: app.py  config.py  core_connector.py  json_trans.py  main_window.py  sys_tray.py  utils.py
(+123 files in other folders)
